# plegma

./: .gitignore  .gitleaks.toml  .kanon-lint-ignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  flake.nix  llms.txt  release-please-config.json
.github/workflows/: basanos-check.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  nightly.yml  pr-hygiene.yml  release-please.yml  release.yml  rust.yml  security.yml
crates/dictyon/: Cargo.toml
crates/dictyon/examples/: connect.rs
crates/dictyon/src/: control.rs  error.rs  lib.rs  noise.rs  transport.rs  wire.rs
crates/dictyon/src/noise/: mod.rs  tests.rs
crates/dictyon/tests/: wire_integration.rs
crates/hamma-core/: Cargo.toml
crates/hamma-core/src/: config.rs  keys.rs  lib.rs  types.rs
crates/plegma-core/: Cargo.toml
crates/plegma-core/src/: keys.rs  lib.rs  types.rs
standards/: AGENT-DOCS.md  API.md  ARCHITECTURE.md  CI.md  CPP.md  CSHARP.md  DATALOG.md  DEPLOYMENT.md  ENVIRONMENT.md  GNOMON.md  KOTLIN.md  NGINX.md  NIX.md  OPERATIONS.md  PERFORMANCE.md  PLANNING.md  PODMAN.md  PROMPTING.md  PROTOBUF.md  PYTHON.md  QA.md  RELEASES.md  REPO-SETUP.md  RESTIC.md  RUST.md  SECURITY.md  SHELL.md  SQL.md  STANDARDS.md  STORAGE.md  SYSCTL.md  SYSTEMD.md  TESTING.md  TOML.md  TYPESCRIPT.md  UDEV.md  WORKFLOW.md  WRITING.md  YAML.md
