[package]
name = "dictyon"
description = "Clean-room Rust Tailscale-compatible mesh networking client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hamma-core = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
snow = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hostname = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rcgen = "0.13"
tracing-subscriber = { workspace = true }
