[package]
name = "plegma-core"
description = "Shared types for the plegma mesh networking stack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
